syntax = "proto3";
package pb;
option go_package = "./pb";
import "common.proto";

message NoticeInsertReq {
  RequestHeader header = 1;
}

message NoticeInsertResp {
  ResponseHeader header = 1;
}

service noticeService {
  //NoticeInsert 插入公告
  rpc NoticeInsert(NoticeInsertReq) returns (NoticeInsertResp);
}
